// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Links & Buttons ActiveTab smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <button delay="0.48303426426270435"
          class="undefined text-xl md:text-3xl font-bold mr-3 md:mr-0 group hover:underline text-gray-900 dark:text-gray-200"
  >
    usitas casso
  </button>
</div>
`;

exports[`Atoms/Links & Buttons Button smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <button class="undefined border-2 border-slate-500 uppercase font-bold bg-white dark:bg-slate-900 px-4 py-2 text-slate-800 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-800 hover:text-black dark:hover:text-white">
    subito circumvenio
  </button>
</div>
`;

exports[`Atoms/Links & Buttons Inline smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <a class="underline hover:text-slate-800 hover:no-underline"
     href="https://impeccable-reconsideration.biz/"
  >
    suspendo decens
  </a>
</div>
`;

exports[`Atoms/Links & Buttons LinkButton smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <a class="border-2 border-slate-500 uppercase font-bold bg-white dark:bg-slate-900 px-4 py-2 text-slate-800 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-800 hover:text-black dark:hover:text-white"
     href="https://insignificant-wear.net"
  >
    calamitas ipsa
  </a>
</div>
`;

exports[`Atoms/Links & Buttons Motion smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <button delay="0.3431780161508694">
    <span class="group-hover:underline inline-block"
          style="transform: translateY(-0.195104px);"
    >
      d
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      e
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      n
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      i
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      q
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      u
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      e
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      &nbsp;
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      c
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      r
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      u
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      c
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      i
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      a
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      m
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      e
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      n
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      t
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      u
    </span>
    <span class="group-hover:underline inline-block"
          style="transform: none;"
    >
      m
    </span>
  </button>
</div>
`;

exports[`Atoms/Links & Buttons Post smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <div style="max-width: 300px;">
    <a class="group flex flex-col-reverse md:flex-row bg-slate-200 p-5 border-4 border-slate-200 dark:border-slate-900 dark:bg-slate-900 hover:bg-slate-100 dark:hover:bg-slate-800 hover:border-slate-400 transition-all duration-100 ease-in-out"
       href="/curvo-depulso-cursim"
    >
      <div class="w-full text-left  text-2xl font-black">
        atque exercitationem exercitationem
        <div class="bg-slate-800 dark:bg-slate-300 h-1 w-full"
             style="margin-left: auto; max-width: 100%;"
        >
        </div>
      </div>
      <img alt
           loading="lazy"
           width="320"
           height="160"
           decoding="async"
           data-nimg="1"
           class="border-4 h-30 w-80 object-cover border-slate-800 dark:border-slate-300 brightness-90 dark:brightness:75 group-hover:brightness-105 bg-white dark:bg-slate-900 transition-all duration-100 ease-in-out"
           srcset="https://picsum.photos/seed/IkmeiD5q/2537/3397?w=384&amp;q=75 1x, https://picsum.photos/seed/IkmeiD5q/2537/3397?w=640&amp;q=75 2x"
           src="https://picsum.photos/seed/IkmeiD5q/2537/3397?w=640&amp;q=75"
           style="color: transparent;"
      >
    </a>
  </div>
</div>
`;

exports[`Atoms/Links & Buttons Protected smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <a href="/#">
    color cursim
  </a>
</div>
`;

exports[`Atoms/Links & Buttons Tab smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <button delay="0.4148262119536318"
          class="undefined text-xl md:text-3xl font-bold mr-3 md:mr-0 group hover:underline text-gray-600 dark:text-gray-400"
  >
    ancilla comes
  </button>
</div>
`;
